--- a/index.html
+++ b/index.html
@@ -1,248 +1,18 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <title>studio</title>
+
+    <title>JS</title>
   </head>
   <body>
-    <!--Шапка сайта-->
-    <header>
-      <nav>
-        <a href="/">Web Studio</a>
-
-        <ul>
-          <li>
-            <a href="">Студия</a>
-          </li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
-        </ul>
-
-        <ul>
-          <li>
-            <img src="./images/mailicon.svg" alt="электронная-почта" />
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-            <img src="./images/phoneicon.svg" alt="телефон" />
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <!--Герои-->
-      <section>
-        <h1>
-          Эффективные решения <br />
-          для вашего бизнеса
-        </h1>
-        <a href="">Заказать услугу</a>
-      </section>
-      <!--Преимущества-->
-      <section>
-        <ul>
-          <li>
-            <img src="./images/antenna1.svg" alt="фото-спутник" />
-            <h3>Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <img src="./images/clock1.svg" alt="фото-часы" />
-            <h3>Пунктуальность</h3>
-            <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <img src="./images/diagram1.svg" alt="фото-диаграмма" />
-            <h3>Планирование</h3>
-            <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <img src="./images/astronaut1.svg" alt="фото-астронавт" />
-            <h3>Современные технологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
-      </section>
-
-      <!--Чем мы занимаемся-->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
-            <a href=""
-              ><img
-                src="./images/desktop.jpg"
-                width="370"
-                height="294"
-                alt="десктоп"
-            /></a>
-            <h3>Десктопные приложения</h3>
-          </li>
-          <li>
-            <a href=""
-              ><img
-                src="./images/mobile.jpg"
-                width="370"
-                height="294"
-                alt="мобильный"
-            /></a>
-            <h3>Мобильные приложения</h3>
-          </li>
-          <li>
-            <a href=""
-              ><img
-                src="./images/computer.jpg"
-                width="370"
-                height="294"
-                alt="компьютер"
-            /></a>
-            <h3>Дизайнерские решения</h3>
-          </li>
-        </ul>
-      </section>
-      <!--Наша команда-->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/John.jpg"
-              width="270"
-              height="260"
-              alt="фото-джон"
-            />
-            <h3>John Smith</h3>
-            <p>Product Designer</p>
-            <ul>
-              <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
-              <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-              <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-              <li><a href="" aria-label="Ссылка на Linkedin">Linkedin</a></li>
-            </ul>
-          </li>
-
-          <li>
-            <img
-              src="./images/Marta.jpg"
-              width="270"
-              height="260"
-              alt="фото-марта"
-            />
-            <h3>Marta Stewart</h3>
-            <p>Frontend Developer</p>
-            <ul>
-              <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
-              <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-              <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-              <li><a href="" aria-label="Ссылка на Linkedin">Linkedin</a></li>
-            </ul>
-          </li>
-          <li>
-            <img
-              src="./images/Robert.jpg"
-              width="270"
-              height="260"
-              alt="фото-роберт"
-            />
-            <h3>Robert Jakis</h3>
-            <p>Marketing</p>
-            <ul>
-              <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
-              <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-              <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-              <li><a href="" aria-label="Ссылка на Linkedin">Linkedin</a></li>
-            </ul>
-          </li>
-          <li>
-            <img
-              src="./images/Martin.jpg"
-              width="270"
-              height="260"
-              alt="фото-мартин"
-            />
-            <h3>Martin Doe</h3>
-            <p>UI Designer</p>
-            <ul>
-              <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
-              <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-              <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-              <li><a href="" aria-label="Ссылка на Linkedin">Linkedin</a></li>
-            </ul>
-          </li>
-        </ul>
-      </section>
-      <!--Постоянные клиенты-->
-      <section>
-        <h2>Постоянные клиенты</h2>
-        <ul>
-          <li>
-            <a href=""><img src="./images/logo1.svg" alt="Клиент1" /></a>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <a href=""><img src="./images/logo2.svg" alt="Клиент2" /></a>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <a href=""><img src="./images/logo3.svg" alt="Клиент3" /></a>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <a href=""><img src="./images/logo4.svg" alt="Клиент4" /></a>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <a href=""><img src="./images/logo5.svg" alt="Клиент" /></a>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <a href=""><img src="./images/logo6.svg" alt="Клиент6" /></a>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <!--Fotter-->
-    <footer>
-      <a href="/">Web Studio</a>
-      <address>
-        г. Киев, пр-т Леси Украинки, 26
-        <ul>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-        </ul>
-      </address>
-
-      <b>Присоединяйтесь</b>
-      <ul>
-        <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
-        <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-        <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-        <li><a href="" aria-label="Ссылка на Linkedin">Linkedin</a></li>
-      </ul>
-
-      <b>Подпишитесь на рассылку</b>
-      <a href="">Подписаться</a>
-      <p>2020 &#10072; Developed by GoIT Students</p>
-    </footer>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus
+      cupiditate accusantium similique odio assumenda culpa totam maxime error
+      ea nulla eligendi nostrum, eveniet ex voluptatibus doloribus? Pariatur
+      quos nihil perferendis.
+    </p>
+    <script src="js/script.js"></script>
   </body>
 </html>
