--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
     <title>JS</title>
   </head>
   <body>
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus
-      cupiditate accusantium similique odio assumenda culpa totam maxime error
-      ea nulla eligendi nostrum, eveniet ex voluptatibus doloribus? Pariatur
-      quos nihil perferendis.
-    </p>
-    <script src="js/script.js"></script>
+    <script src="js/task_1.js" type="module"></script>
+    <script src="js/task_2.js" type="module"></script>
   </body>
 </html>
